--- a/assets/sass/blocks/_menu-mobile.scss
+++ b/assets/sass/blocks/_menu-mobile.scss
@@ -8,7 +8,8 @@
         display: none;
     }
     .nav-mobile-header {
-        display: block;
+        display: flex;
+        align-items: center;
         position: fixed;
         width: 100%;
         padding: 10px 15px;
@@ -23,8 +24,13 @@
             max-height: 50px;
         }
 
+        .logo-img {
+            fill: #fff;
+        }
+
         .hamburger {
-            position: absolute;
+            position: static;
+            margin-left: auto;
             top: 15px;
             right: 10px;
         }
@@ -32,20 +38,20 @@
 }
 
 .nav {
-    display: block;
-    position: relative;
-    margin: 10px 15px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.35);
-    border-radius: 4px;
     text-align: center;
+    padding: 10px 0;
+    border-bottom: 1px solid #f5f6f8;
+
     .menu {
-        @extend %reset-list;
-        font-size: 0;
+        &-list {
+            @extend %reset-list;
+            font-size: 0;
+        }
 
         &-item {
             display: inline-block;
             vertical-align: middle;
-            padding: 5px;
+            margin: 0 40px;
 
             .menu-item-has-children-arrow {
                 display: none;
@@ -115,7 +121,7 @@
             &.current-menu-parent,
             &.current-menu-ancestor {
                 .menu-link {
-                    text-decoration: none;
+                    text-decoration: underline;
                 }
             }
 
@@ -130,8 +136,8 @@
 
         &-link {
             display: block;
-            padding: 8px 10px;
-            color: #000;
+            padding: 10px;
+            color: #333;
             font-size: 16px;
             line-height: 1.3;
             text-align: center;
@@ -198,7 +204,7 @@
         &-link {
             display: block;
             padding: 8px 15px;
-            color: #000;
+            color: #333;
             font-size: 14px;
             line-height: 1.3;
             text-decoration: none;
