--- a/assets/sass/blocks/_menu.scss
+++ b/assets/sass/blocks/_menu.scss
@@ -4,6 +4,7 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         list-style: none;
+        padding-left: 0;
 
         .current-menu-item {
             position: relative;
