Add custom post type Reviews, add shortcode, fix shortcode, add styles for price table, flog items, reviews items;

--- a/assets/sass/core/_help-style.scss
+++ b/assets/sass/core/_help-style.scss
@@ -33,6 +33,10 @@
     text-align: justify;
 }
 
+.text-bold {
+    font-weight: bold;
+}
+
 .text-uppercase {
     text-transform: uppercase;
 }
@@ -43,6 +47,10 @@
 
 .text-nowrap {
     white-space: nowrap;
+}
+
+.text-size-22 {
+    font-size: 22px;
 }
 
 .pull-right {
