--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,5 @@
 /*
-Theme Name: brainworks-v4.8.3
+Theme Name: watermax
 Theme URI:
 Text Domain: brainworks
 Author: Brain Works
@@ -7,10 +7,9 @@ Author URI: http://brainworks.com.ua
 Description:
 License:
 License URI:
-Version: 4.8.3
+Version: 1.0.0
 Tags: one-column, two-columns, full-width-template, e-commerce
 */
-
 // CORE
 @import "core/reset";
 @import "core/mediaqueries";
@@ -19,22 +18,18 @@ Tags: one-column, two-columns, full-width-template, e-commerce
 @import "core/fonts";
 @import "core/wp-core";
 @import "core/help-style";
-
 // PLUG-INs
 @import "plugins/font-awesome/font-awesome";
 @import "plugins/plug-ins";
-
 // BOOTSTRAP
 //@import "bootstrap/bootstrap-buttons";
 @import "bootstrap/bootstrap-embded";
 @import "bootstrap/bootstrap-grid";
 @import "bootstrap/bootstrap-tables";
-
 // PAGES
 @import "pages/single-post";
 @import "pages/blog-page";
 //@import "pages/woo";
-
 // ELEMENTS
 @import "elements/typography";
 @import "elements/responsive-titles";
@@ -50,7 +45,6 @@ Tags: one-column, two-columns, full-width-template, e-commerce
 @import "elements/dividers";
 @import "elements/icons";
 @import "elements/custom-scrollbar";
-
 // BLOCKS
 @import "blocks/header";
 @import "blocks/menu";
@@ -171,6 +165,213 @@ img {
     outline: 0;
 }
 
+.review {
+    &-wrapper {
+        padding: 60px 55px;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 10px 68px rgba(#303030, .11);
+        max-width: 950px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    &-list {
+
+    }
+
+    &-item {
+        color: #333;
+    }
+
+    &-title {
+        color: #1f905d;
+        font-size: 30px;
+        font-weight: bold;
+        font-style: italic;
+        line-height: 1.2;
+        margin-bottom: 30px;
+    }
+
+    &-content {
+        font-weight: 300;
+        margin-bottom: 20px;
+
+        &,
+        p {
+            font-size: 16px;
+            line-height: (28/16);
+        }
+    }
+
+    &-client {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+
+    &-location {
+        font-size: 15px;
+        color: #a1a1a1;
+        margin-bottom: 30px;
+    }
+
+    &-thumbnails {
+        height: 100px;
+    }
+
+    &-thumbnail {
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0 15px;
+        width: 50px;
+        height: 50px;
+        filter: grayscale(100%);
+        transition: .4s ease-in;
+
+        &.is-current {
+            width: 100px;
+            height: 100px;
+            filter: grayscale(0%);
+            transition: .4s;
+        }
+
+        img {
+            border-radius: 50%;
+        }
+    }
+}
+
+.price {
+    &-wrapper {
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 10px 101px rgba(#333, .1);
+        margin-bottom: 0;
+
+        & + & {
+            margin-top: 50px;
+        }
+    }
+
+    &-table {
+        padding: 0;
+        border-collapse: collapse;
+        table-layout: fixed;
+        border-spacing: 0;
+        text-align: left;
+
+        &,
+        thead,
+        tbody,
+        tr,
+        th,
+        td {
+            border: 0;
+            padding: 0;
+        }
+
+        th,
+        td {
+            line-height: 1.5;
+            text-align: left;
+            padding: 15px 50px;
+        }
+
+        th {
+            color: #fff;
+            font-size: 20px;
+            background-color: #fbc217;
+
+            &:first-child {
+                font-weight: inherit;
+                text-align: center;
+            }
+        }
+
+        td {
+            border-bottom: 1px solid #ebebed;
+            background-color: #fff;
+            color: #333;
+            font-size: 15px;
+        }
+    }
+}
+
+.custom-card {
+    padding: 25px;
+    border-radius: 5px;
+    border: 1px solid #e4e6eb;
+    background-color: transparent;
+    transition: .2s ease-in-out;
+    margin: 15px 0;
+
+    &:hover {
+        border-color: #fff;
+        background-color: #fff;
+        box-shadow: 0 10px 68px rgba(#303030, .11);
+    }
+
+    &-image {
+        overflow: hidden;
+        background-color: #c0c0c0;
+
+        img {
+            border-radius: 5px;
+        }
+    }
+
+    &-body {
+        padding-top: 15px;
+
+        h3 {
+            color: #303030;
+            font-size: 20px;
+            font-weight: bold;
+            line-height: (28/20);
+            margin-bottom: 10px;
+
+            a {
+                text-decoration: none;
+                color: inherit;
+                transition: color .2s ease-in-out;
+
+                &:hover {
+                    color: #1f905d;
+                }
+            }
+        }
+    }
+
+    &-content {
+        color: #303030;
+        font-size: 15px;
+        font-weight: 300;
+        line-height: (25/15);
+        margin-bottom: 10px;
+    }
+
+    &-time {
+        font-size: 14px;
+        color: #9f9f9f;
+    }
+
+    &-link {
+        float: right;
+        color: #1f905d;
+        font-weight: bold;
+        font-size: 17px;
+        text-decoration: none;
+        border-bottom: 1px solid transparent;
+        transition: border-color .2s ease-in-out;
+
+        &:hover {
+            color: #1f905d;
+            border-bottom-color: #1f905d;
+        }
+    }
+}
+
 @media only screen and (max-width: 1024px) {
     .header {
         .social {
@@ -220,6 +421,33 @@ img {
         }
     }
 
+    .custom-card {
+        padding: 15px;
+    }
+
+    .price {
+        &-wrapper {
+            border: 0;
+
+            & + & {
+                margin-top: 20px;
+            }
+        }
+
+        &-table {
+            table-layout: auto;
+
+            th {
+                font-size: 18px;
+            }
+
+            th,
+            td {
+                padding: 10px 20px;
+            }
+        }
+    }
+
     .footer {
         padding: 12px 0;
         text-align: center;
@@ -251,5 +479,27 @@ img {
         &-logo {
             display: none;
         }
+    }
+
+    .price {
+        &-table {
+            th,
+            td {
+                line-height: 1.3;
+                padding: 8px 10px;
+            }
+
+            th {
+                font-size: 16px;
+            }
+
+            td {
+                font-size: 14px;
+            }
+        }
+    }
+
+    .text-size-22 {
+        font-size: 18px;
     }
 }
