--- a/style.css
+++ b/style.css
@@ -5135,6 +5135,122 @@ ol.commentlist .comment-body {
     line-height: 1.5;
     color: #333; }
 
+.review-item {
+  margin-bottom: 30px; }
+
+.review-client {
+  position: relative;
+  margin-bottom: 10px; }
+
+.review-avatar {
+  border-radius: 50%; }
+
+.review-social {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  bottom: 0;
+  display: inline-block;
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
+  font-size: 14px;
+  line-height: 25px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #333; }
+  .review-social:hover, .review-social:active {
+    color: #fff; }
+
+.review-author {
+  font-size: 16px;
+  line-height: 1.3;
+  margin-bottom: 10px; }
+
+.review-content,
+.review-content p {
+  font-size: 16px;
+  line-height: 1.5; }
+
+.review-date {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #333; }
+
+.reviews-wrapper {
+  padding: 60px 55px;
+  border-radius: 5px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 10px 68px rgba(48, 48, 48, 0.11);
+  box-shadow: 0 10px 68px rgba(48, 48, 48, 0.11);
+  max-width: 950px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.reviews-item {
+  color: #333; }
+
+.reviews-title {
+  color: #1f905d;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1.2;
+  margin-bottom: 30px; }
+
+.reviews-content {
+  font-weight: 300;
+  margin-bottom: 20px; }
+  .reviews-content,
+  .reviews-content p {
+    font-size: 16px;
+    line-height: 1.75; }
+
+.reviews-client {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px; }
+
+.reviews-location {
+  font-size: 15px;
+  color: #a1a1a1;
+  margin-bottom: 30px; }
+
+.reviews-thumbnails {
+  height: 100px; }
+
+.reviews-thumbnail {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 15px;
+  width: 50px;
+  height: 50px;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  -webkit-transition: .4s ease-in;
+  -o-transition: .4s ease-in;
+  transition: .4s ease-in; }
+  .reviews-thumbnail.is-current {
+    width: 100px;
+    height: 100px;
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+    -webkit-transition: .4s;
+    -o-transition: .4s;
+    transition: .4s; }
+  .reviews-thumbnail img {
+    border-radius: 50%; }
+
+@media only screen and (max-width: 554px) {
+  .review-client {
+    width: 100px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto; }
+  .review-content,
+  .review-content p {
+    font-size: 14px; } }
+
 h1, h2, h3, h4, h5, h6, h1.hero-title {
   color: #2c3e50;
   font-family: "Montserrat", "Arial", "Helvetica", sans-serif; }
@@ -6532,70 +6648,6 @@ img {
 
 :focus {
   outline: 0; }
-
-.review-wrapper {
-  padding: 60px 55px;
-  border-radius: 5px;
-  background-color: #fff;
-  -webkit-box-shadow: 0 10px 68px rgba(48, 48, 48, 0.11);
-  box-shadow: 0 10px 68px rgba(48, 48, 48, 0.11);
-  max-width: 950px;
-  margin-left: auto;
-  margin-right: auto; }
-
-.review-item {
-  color: #333; }
-
-.review-title {
-  color: #1f905d;
-  font-size: 30px;
-  font-weight: bold;
-  font-style: italic;
-  line-height: 1.2;
-  margin-bottom: 30px; }
-
-.review-content {
-  font-weight: 300;
-  margin-bottom: 20px; }
-  .review-content,
-  .review-content p {
-    font-size: 16px;
-    line-height: 1.75; }
-
-.review-client {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 10px; }
-
-.review-location {
-  font-size: 15px;
-  color: #a1a1a1;
-  margin-bottom: 30px; }
-
-.review-thumbnails {
-  height: 100px; }
-
-.review-thumbnail {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 15px;
-  width: 50px;
-  height: 50px;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  -webkit-transition: .4s ease-in;
-  -o-transition: .4s ease-in;
-  transition: .4s ease-in; }
-  .review-thumbnail.is-current {
-    width: 100px;
-    height: 100px;
-    -webkit-filter: grayscale(0%);
-    filter: grayscale(0%);
-    -webkit-transition: .4s;
-    -o-transition: .4s;
-    transition: .4s; }
-  .review-thumbnail img {
-    border-radius: 50%; }
 
 .price-wrapper {
   border-radius: 5px;
