--- a/assets/sass/blocks/_sidebar.scss
+++ b/assets/sass/blocks/_sidebar.scss
@@ -28,6 +28,7 @@
 
             .sub-menu {
                 padding-left: 15px;
+                list-style: none;
 
                 .sub-menu-item {
 
