--- a/assets/sass/blocks/_sidebar.scss
+++ b/assets/sass/blocks/_sidebar.scss
@@ -15,6 +15,8 @@
         }
 
         .menu {
+            list-style: none;
+
             .menu-item {
                 a, span {
                     margin-bottom: 4px;
